--- a/Classwork/Section2/Nile.Windows/Nile.Windows.csproj
+++ b/Classwork/Section2/Nile.Windows/Nile.Windows.csproj
@@ -75,5 +75,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nile\Nile.csproj">
+      <Project>{7120c693-4ffe-45a0-b669-1cd1331de125}</Project>
+      <Name>Nile</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
