--- a/Labs/Lab2/CadeSchlaefli.MovieLib.Windows/CadeSchlaefli.MovieLib.Windows.csproj
+++ b/Labs/Lab2/CadeSchlaefli.MovieLib.Windows/CadeSchlaefli.MovieLib.Windows.csproj
@@ -51,10 +51,19 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MovieDetailForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MovieDetailForm.Designer.cs">
+      <DependentUpon>MovieDetailForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MovieDetailForm.resx">
+      <DependentUpon>MovieDetailForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
