--- a/Classwork/Section3/Nile/Nile.csproj
+++ b/Classwork/Section3/Nile/Nile.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Data\IProductDatabase.cs" />
     <Compile Include="Data\ProductDatabase.cs" />
+    <Compile Include="Data\ProductDatabaseExtension.cs" />
     <Compile Include="ObjectValidator.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
