--- a/OtherClassAssignments/Assignment4/Assignment4/Assignment4.csproj
+++ b/OtherClassAssignments/Assignment4/Assignment4/Assignment4.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AVLTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tree.cs" />
     <Compile Include="WordData.cs" />
   </ItemGroup>
   <ItemGroup>
