--- a/Classwork/Section5/Nile.Web.Mcv/Nile.Web.Mcv.csproj
+++ b/Classwork/Section5/Nile.Web.Mcv/Nile.Web.Mcv.csproj
@@ -119,6 +119,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ProductModel - Copy.cs" />
+    <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -159,7 +161,6 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Views\Products\" />
   </ItemGroup>
   <ItemGroup>
@@ -176,6 +177,20 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nile.Data.SQL\Nile.Data.SQL.csproj">
+      <Project>{877fcaa1-aceb-451c-900c-a1c4dbf3556a}</Project>
+      <Name>Nile.Data.SQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NileDatabase\NileDatabase.sqlproj">
+      <Project>{56c0adf1-90e3-4e66-998c-20fe50d88a2d}</Project>
+      <Name>NileDatabase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Nile\Nile.csproj">
+      <Project>{7120c693-4ffe-45a0-b669-1cd1331de125}</Project>
+      <Name>Nile</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
